.provarCaches/00D6C0000000xA6UAI/objects/sked__Availability_Template_Resource__c.object
<CustomObject>
    <fields>
        <fullName>sked__Availability_Template__c</fullName>
        <label>Availability Template</label>
        <referenceTo>sked__Availability_Template__c</referenceTo>
        <relationshipLabel>Availability Template Resources</relationshipLabel>
        <relationshipName>Availability_Template_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the template resource has been migrated to a pattern resource</inlineHelpText>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Availability Template Resources</relationshipLabel>
        <relationshipName>Availability_Template_Resources</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Availability Template Resource</label>
    <nameField>
        <displayFormat>ATR-{0000}</displayFormat>
        <label>Availability Template Resource Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability Template Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>